# HierachicalElementsExample

./: CMakeLists.txt  LICENSE  Legendre1DElement.hpp  LegendreTensorElement.hpp  README.md  TensorElementIntegrate.cpp  main.cpp
include/: Legendre1DElement.hpp  LegendreTensorElement.hpp  NumericalIntegration.hpp  abstractProblem.hpp  hierachicalFEMesh.hpp  hierachicalFiniteElement.hpp  hierachicalMG.hpp  integrationRules.hpp
sampleProblems/: poissonProb.hpp
src/: Legendre1DElement.hpp  LegendreTensorElement.hpp
